removed debugging updated stylesheet to use right aligns Issue number: Obtained from: Submitted by: Reviewed by:

--- a/demos/browser/xhtml/new/general.css
+++ b/demos/browser/xhtml/new/general.css
@@ -17,7 +17,7 @@
 		position: absolute;
 		top: 0px;
 		right: 0px; 
-		text-align: left; 
+		text-align: right; 
 	}
 	
 	.left-link, .right-link {
